# phy607_Proj3

./: NuclearMCMC.py  README.md  report.tex  setup.cfg
nuclear_mcmc/: NuclearMCMC.py  __init__.py  data_model.py  diagnostics.py  emcee_sampler.py  main.py  mh_sampler.py  plotting.py  probabilities.py
