[metadata]
name = nuclear-mcmc
version = 0.1.0
author = Shreyan & Amelia
description = "MCMC analysis of radioactive decay for PHY607 project."
license = MIT
url = ""
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    numpy
    matplotlib
    corner
    scipy

python_requires = >=3.8

[options.entry_points]
console_scripts =
    nuclear-mcmc = nuclear_mcmc.main:main
